VTFoundation_files/mbr-additional.css
body {
    font-family: Bellota Text
}

.display-1 {
    font-family: bellota text, display;
    font-size: 4rem;
    line-height: 1.1
}

.display-1>.mbr-iconfont {
    font-size: 5rem
}

.display-2 {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 3.3rem;
    line-height: 1.1;
    background-color: #f5f5f5
}

.display-2>.mbr-iconfont {
    font-size: 3.5rem
}

.display-4 {
    font-family: bellota text, display;
    font-size: 1.1rem;
    line-height: 1.5
}

.display-4>.mbr-iconfont {
    font-size: 1.375rem
}

.display-5 {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 1rem;
    line-height: 1.5;
}

.display-5>.mbr-iconfont {
    font-size: 2.125rem
}

.display-7 {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-seri;
    font-size: 1.2rem;
    line-height: 1.5
}
.display-7 .message
{
    
}
.display-7>.mbr-iconfont {
    font-size: 1.5rem
}

@media(max-width:992px) {
    .display-1 {
        font-size: 3.2rem
    }
}

@media(max-width:768px) {
    .display-1 {
        font-size: 2.8rem;
        font-size: calc(2.05rem + (4 - 2.05) * ((100vw - 20rem)/(48 - 20)));
        line-height: calc(1.1 * (2.05rem + (4 - 2.05) * ((100vw - 20rem)/(48 - 20))))
    }

    .display-2 {
        font-size: 2rem;
        font-size: calc(1.63rem + (2.8 - 1.63) * ((100vw - 20rem)/(48 - 20)));
        line-height: calc(1.3 * (1.63rem + (2.8 - 1.63) * ((100vw - 20rem)/(48 - 20))))
    }

    .display-4 {
        font-size: .88rem;
        font-size: calc(1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem)/(48 - 20)));
        line-height: calc(1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem)/(48 - 20))))
    }

    .display-5 {
        font-size: 1.36rem;
        font-size: calc(1.245rem + (1.7 - 1.245) * ((100vw - 20rem)/(48 - 20)));
        line-height: calc(1.4 * (1.245rem + (1.7 - 1.245) * ((100vw - 20rem)/(48 - 20))))
    }

    .display-7 {
        font-size: .96rem;
        font-size: calc(1.07rem + (1.2 - 1.07) * ((100vw - 20rem)/(48 - 20)));
        line-height: calc(1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem)/(48 - 20))))
    }
}

.btn {
    padding: .6rem 1.2rem;
    border-radius: 4px
}

.btn-sm {
    padding: .6rem 1.2rem;
    border-radius: 4px
}

.btn-md {
    padding: .6rem 1.2rem;
    border-radius: 4px
}

.btn-lg {
    padding: 1rem 2.6rem;
    border-radius: 4px
}

.btn-dt {
    margin-top: 1.8rem;
    margin-left: 43%;
    padding: 1rem 2.4rem;
    border-radius: 4px
}

.bg-primary {
    background-color: #36187d !important
}

.bg-success {
    background-color: #35b8fc !important
}

.bg-info {
    background-color: #47b5ed !important
}

.bg-warning {
    background-color: #6c758f !important
}

.bg-danger {
    background-color: #36187d !important
}

.btn-primary,
.btn-primary:active {
    background-color: #36187d !important;
    border-color: #36187d !important;
    color: #fff !important
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary.focus,
.btn-primary.active {
    color: #fff !important;
    background-color: #241052 !important;
    border-color: #241052 !important
}

.btn-primary.disabled,
.btn-primary:disabled {
    color: #fff !important;
    background-color: #241052 !important;
    border-color: #241052 !important
}

.btn-secondary,
.btn-secondary:active {
    background-color: #ea2396 !important;
    border-color: #ea2396 !important;
    color: #fff !important
}

.btn-secondary:hover,
.btn-secondary:focus,
.btn-secondary.focus,
.btn-secondary.active {
    color: #fff !important;
    background-color: #c7137b !important;
    border-color: #c7137b !important
}

.btn-secondary.disabled,
.btn-secondary:disabled {
    color: #fff !important;
    background-color: #c7137b !important;
    border-color: #c7137b !important
}

.btn-info,
.btn-info:active {
    background-color: #47b5ed !important;
    border-color: #47b5ed !important;
    color: #fff !important
}

.btn-info:hover,
.btn-info:focus,
.btn-info.focus,
.btn-info.active {
    color: #fff !important;
    background-color: #19a2e8 !important;
    border-color: #19a2e8 !important
}

.btn-info.disabled,
.btn-info:disabled {
    color: #fff !important;
    background-color: #19a2e8 !important;
    border-color: #19a2e8 !important
}

.btn-success,
.btn-success:active {
    background-color: #35b8fc !important;
    border-color: #35b8fc !important;
    color: #fff !important
}

.btn-success:hover,
.btn-success:focus,
.btn-success.focus,
.btn-success.active {
    color: #fff !important;
    background-color: #04a6fa !important;
    border-color: #04a6fa !important
}

.btn-success.disabled,
.btn-success:disabled {
    color: #fff !important;
    background-color: #04a6fa !important;
    border-color: #04a6fa !important
}

.btn-warning,
.btn-warning:active {
    background-color: #6c758f !important;
    border-color: #6c758f !important;
    color: #fff !important
}

.btn-warning:hover,
.btn-warning:focus,
.btn-warning.focus,
.btn-warning.active {
    color: #fff !important;
    background-color: #565d72 !important;
    border-color: #565d72 !important
}

.btn-warning.disabled,
.btn-warning:disabled {
    color: #fff !important;
    background-color: #565d72 !important;
    border-color: #565d72 !important
}

.btn-danger,
.btn-danger:active {
    background-color: #36187d !important;
    border-color: #36187d !important;
    color: #fff !important
}

.btn-danger:hover,
.btn-danger:focus,
.btn-danger.focus,
.btn-danger.active {
    color: #fff !important;
    background-color: #241052 !important;
    border-color: #241052 !important
}
/* ... */

